# brain-im

./: CMakeLists.txt
base/: AccountParameterModel.cpp  AccountsModel.cpp  AccountsModel.hpp  CMakeLists.txt  ContactsModel.cpp  ContactsModel.hpp  Core.cpp  MessagesModel.cpp  MessagesModel.hpp  PeersModel.hpp  TelepathyMessagesModel.cpp  TelepathyMessagesModel.hpp  Types.hpp
examples/qmlclient/: CMakeLists.txt  main.cpp  main.qml  main.qmlc
examples/qmlclient/components/: ScrollablePage.qmlc
examples/qmlclient/pages/: AccountManagement.qml  IndexPage.qml  IndexPage.qmlc  MainView.qml  MainView.qmlc
qml/: CMakeLists.txt  main.cpp  main.qml
qml/pages/: AccountManagement.qml  IndexPage.qml  MainView.qml
qml/pages/accounts/: AccountEditor.qml  AccountView.qml
qml/pages/dialogs/: DialogDelegate.qml  DialogView.qml
qml/pages/messages/: MessageDelegate.qml  MessageEditor.qml  MessageView.qml  ServiceMessageDelegate.qml
src/brain-im/: AccountsModel.cpp  AccountsModel.hpp  CMakeLists.txt  MessagesModel.hpp  Types.hpp
src/imports/: AccountEditor.qml  AccountView.qml  CMakeLists.txt  ConnectionManagerView.qml  MessageDelegate.qmlc  MessageEditor.qmlc  MessageToolbar.qmlc  MessageView.qmlc  ProtocolView.qml  ServiceMessageDelegate.qmlc  plugins.qmltypes  qmldir
